// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with custom value 1`] = `
<div>
  Viewing 
  2
   
  expenses
   totalling  
  $2.00
</div>
`;

exports[`should render ExpensesSummary correctly with default value 1`] = `
<div>
  Viewing 
  0
   
  expenses
   totalling  
  $0.00
</div>
`;
